个人信息完善 登录凭证 登出

--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -13,6 +13,9 @@
         <button type="submit" >注册</button>
     </form>
 
+    <p th:text="${nameMessage}"></p>
+    <p th:text="${passwordMessage}"></p>
+    <p th:text="${emailMessage}"></p>
 </div>
 </body>
 </html>
