--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
+<div>
+    <a th:href="@{/logout}">退出登录</a>
+    <a th:href="@{/addinformation}">完善信息</a>
+    <a th:href="@{/regist}">注册</a>
+    <a th:href="@{/login}">登录</a>
 
+    <p th:text="${msg}"></p>
+    <p th:text="${target}"></p>
+</div>
 </body>
 </html>
