--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -10,6 +10,10 @@
     密码:<input type="password" name="password" id="password">
     <button type="submit">登录</button>
 </form>
+<div>
+    <p th:text="${accountMessage}"></p>
+    <p th:text="${passwordMessage}"></p>
+</div>
 
 </body>
 </html>
