用户列表 详情 修改 查询

--- a/src/main/resources/templates/information.html
+++ b/src/main/resources/templates/information.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>用户完善信息</title>
 </head>
 <body>
 <form method="post" th:action="@{/information}">
