--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>首页</title>
 </head>
 <body>
 <div>
@@ -10,6 +10,8 @@
     <a th:href="@{/addinformation}">完善信息</a>
     <a th:href="@{/regist}">注册</a>
     <a th:href="@{/login}">登录</a>
+    <a th:href="@{/patientList}">用户列表</a>
+    <a th:href="@{/change}">需要点进用户列表里的用户详情才能修改用户信息</a>
 
     <p th:text="${msg}"></p>
     <p th:text="${target}"></p>
