--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -11,8 +11,8 @@
     <button type="submit">登录</button>
 </form>
 <div>
-    <p th:text="${accountMessage}"></p>
-    <p th:text="${passwordMessage}"></p>
+    <tr th:text="${accountMessage}"></tr>
+    <tr th:text="${passwordMessage}"></tr>
 </div>
 
 </body>
