--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -13,9 +13,9 @@
         <button type="submit" >注册</button>
     </form>
 
-    <p th:text="${nameMessage}"></p>
-    <p th:text="${passwordMessage}"></p>
-    <p th:text="${emailMessage}"></p>
+    账号异常:<tr th:text="${nameMessage}"></tr>
+    密码异常:<tr th:text="${passwordMessage}"></tr>
+    邮箱异常:<tr th:text="${emailMessage}"></tr>
 </div>
 </body>
 </html>
