--- a/src/main/resources/templates/information.html
+++ b/src/main/resources/templates/information.html
@@ -15,6 +15,6 @@
     出生日期:<input type="text" name="birthday" id="birthday">
     <button type="submit">提交</button>
 </form>
-<p th:text="${userMessage}"></p>
+<tr th:text="${userMessage}"></tr>
 </body>
 </html>
