改了激活的逻辑 ，激活后再放进数据库，避免注册不激活但邮箱已使用的问题

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -16,9 +16,9 @@
     <p th:text="${msg}"></p>
     <p th:text="${target}"></p>
 
-    死亡人数:<tr th:text="${event.deathNum}"></tr>
-    感染人数:<tr th:text="${event.doubtNUm}"></tr>
-    隔离人数:<tr th:text="${event.divideNum}"></tr>
+<!--    死亡人数:<tr th:text="${event.deathNum}"></tr>-->
+<!--    感染人数:<tr th:text="${event.doubtNUm}"></tr>-->
+<!--    隔离人数:<tr th:text="${event.divideNum}"></tr>-->
 
 </div>
 </body>
