二维码功能，以及前后端交互的优化

--- a/src/main/resources/templates/addTemplate/addUser.html
+++ b/src/main/resources/templates/addTemplate/addUser.html
@@ -56,13 +56,17 @@
                       <input type="text" name="birthday" required  lay-verify="required" placeholder="请输入标题" autocomplete="off" class="layui-input">
                     </div>
                   </div>
+
+
                     <div class="layui-form-item" pane="">
                         <label class="layui-form-label">单选框</label>
                         <div class="layui-input-block">
-                            <input type="radio" name="userType" value="1" title="住户" checked="">
-                            <input type="radio" name="UserType" value="0" title="外来">
+                            <input type="radio" name="userType" value="0" title="住户" checked="">
+                            <input type="radio" name="userType" value="1" title="外来">
+
                         </div>
                     </div>
+
                   <div class="layui-form-item">
                     <div class="layui-input-block">
                       <button class="layui-btn layui-btn-blue" lay-submit lay-filter="formDemo">立即提交</button>
@@ -73,7 +77,7 @@
             </div>
         </div>
     </div>
-    <script src="../../static/layui.all.js"></script>
+    <script src="../layui.all.js"></script>
     <script>
 
     </script>
