--- a/src/main/resources/templates/addTemplate/addfeedback.html
+++ b/src/main/resources/templates/addTemplate/addfeedback.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>添加活动</title>
+    <title>添加反馈</title>
     <link rel="stylesheet" href="../css/layui.css">
 </head>
 <body>
@@ -11,7 +11,7 @@
 
 
         <fieldset class="layui-elem-field layui-field-title" style="margin-top: 20px;">
-            <legend>添加活动</legend>
+            <legend>反馈情况</legend>
         </fieldset>
 
         <form class="layui-form" th:action="@{/addPost}" method="post">
