--- a/src/main/resources/templates/views/console.html
+++ b/src/main/resources/templates/views/console.html
@@ -24,17 +24,6 @@
                                     <div class="total" th:text="${event.deathNum}">126,560</div>
                                 </div>
                             </div>
-                            <div class="chart-body">
-                                <div class="contentwrap">
-                                    fsdfdsf
-                                </div>
-                            </div>
-                            <div class="chart-footer">
-                                <div class="field">
-                                    <span>日注册量</span>
-                                    <span>321</span>
-                                </div>
-                            </div>
                         </div>
                     </div>
                 </div>
@@ -44,22 +33,11 @@
                             <div class="chart-header">
                                 <div class="metawrap">
                                     <div class="meta">
-                                        <span>密接</span>
+                                        <span>高危</span>
                                     </div>
                                     <div class="total" th:text="${event.divideNum}">126,560</div>
                                 </div>
                             </div>
-                            <div class="chart-body">
-                                <div class="contentwrap">
-                                    fsdfdsf
-                                </div>
-                            </div>
-                            <div class="chart-footer">
-                                <div class="field">
-                                    <span>日注册量</span>
-                                    <span>321</span>
-                                </div>
-                            </div>
                         </div>
                     </div>
                 </div>
@@ -69,25 +47,28 @@
                             <div class="chart-header">
                                 <div class="metawrap">
                                     <div class="meta">
-                                        <span>次密接</span>
+                                        <span>中度</span>
                                     </div>
                                     <div class="total" th:text="${event.doubtNUm}">126,560</div>
-                                </div>
-                            </div>
-                            <div class="chart-body">
-                                <div class="contentwrap">
-                                    fsdfdsf
-                                </div>
-                            </div>
-                            <div class="chart-footer">
-                                <div class="field">
-                                    <span>次密接</span>
-                                    <span>321</span>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
+            <div class="layui-col-sm6 layui-col-md3">
+                <div class="layui-card">
+                    <div class="layui-card-body chart-card">
+                        <div class="chart-header">
+                            <div class="metawrap">
+                                <div class="meta">
+                                    <span>外来人员</span>
+                                </div>
+                                <div class="total" th:text="${event.outsiderNum}">126,560</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
 
 <!--            打卡反馈-->
