--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 <div>
+    <img src="/geterweima/123">
     <form method="post" th:action="@{/register}">
         用户名:<input type="text" name="name" id="name" required>
         密码:<input type="password" name="password" id="password" required>
