--- a/src/main/resources/templates/views/Activity.html
+++ b/src/main/resources/templates/views/Activity.html
@@ -33,8 +33,8 @@
                                         <label class="layui-form-label">条件</label>
                                         <div class="layui-inline">
                                             <select  id="sex" style="width: 100px;" class="layui-select">
-                                                <option value="1">姓名</option>
-                                                <option value="2">身份证</option>
+                                                <option value="1">地点</option>
+                                                <option value="2">完整标题</option>
                                             </select>
                                         </div>
                                         <div class="layui-inline">
@@ -44,7 +44,7 @@
                                             <a href="/getAcAll" id="res"><button type="submit" class="layui-btn layui-btn-primary"  lay-submit lay-filter="data-search-btn"><i class="layui-icon"></i> 搜 索</button></a>
                                         </div>
                                         <div class="layui-inline">
-                                            <a target="_blank" href="#" ><span class="layui-btn layui-btn-normal layui-btn-mini">添加</span></a>
+                                            <a target="_blank" th:href="@{/addActivity}" ><span class="layui-btn layui-btn-normal layui-btn-mini">添加</span></a>
                                         </div>
                                         <div class="layui-inline">
                                             <a th:href="@{/getAcByStatus/0}"><button class="layui-btn layui-btn-blue">未结束</button></a>
@@ -70,7 +70,7 @@
                                 <th>人数</th>
                                 <th>负责人</th>
                                 <th>负责人手机</th>
-                                <th>加入时间</th>
+                                <th>开始时间</th>
                                 <th>状态</th>
                                 <th>操作</th>
                             </tr></thead>
@@ -126,9 +126,33 @@
                 success:function (data) {
                     datajson = $.parseJSON(data)
                     alert(datajson.msg);
-
                 }
             })
+
+
+            $("#sex").change(function () {
+                var suffix = $("#suffix").val();
+                var op = $("#sex").val()
+                if(op == 1)
+                {
+                    $("#res").attr("href","/getAcByPlace/"+suffix);
+                }
+                if(op == 2)
+                {
+                    $("#res").attr("href","/getAcByTitle/"+suffix);
+                }
+            })
+
+            $("#suffix").blur(function () {
+                var suffix = $("#suffix").val();
+                var op = $("#sex").val();
+                if(op == 1)
+                    $("#res").attr("href","/getAcByPlace/"+suffix);
+                if(op == 2)
+                    $("#res").attr("href","/getAcByPlace/"+suffix);
+
+            })
+
         }
     </script>
 </body>
