--- a/src/main/resources/templates/views/users.html
+++ b/src/main/resources/templates/views/users.html
@@ -35,6 +35,7 @@
                                             <select  id="sex" style="width: 100px;" class="layui-select">
                                                 <option value="1">姓名</option>
                                                 <option value="2">身份证</option>
+                                                <option value="3">账号id</option>
                                             </select>
                                         </div>
                                         <div class="layui-inline">
@@ -130,6 +131,10 @@
             {
                 $("#res").attr("href","/getByIdcard/"+suffix);
             }
+            if(op == 3)
+            {
+                $("#res").attr("href","/Userdetail/"+suffix);
+            }
         })
 
         $("#suffix").blur(function () {
@@ -139,6 +144,8 @@
                 $("#res").attr("href","/getByName/"+suffix);
             if(op == 2)
                 $("#res").attr("href","/getByIdcard/"+suffix);
+            if(op == 3)
+                $("#res").attr("href","/Userdetail/"+suffix);
 
         })
 
