想太多了，明天直接补丁完成，烂就烂了

--- a/src/main/resources/templates/views/goods.html
+++ b/src/main/resources/templates/views/goods.html
@@ -88,12 +88,12 @@
                                 <td th:text="${goodslist.source}">113664000@qq.com</td>
                                 <td th:text="${goodslist.place}">超级管理员</td>
                                   <td th:text="${goodslist.accountid}">11</td>
-                                  <td th:text="${goodslist.modifier}"></td>
+                                  <td th:text="${goodslist.Modifier}"></td>
                                 <td class="td-status">
-                                  <span class="layui-btn layui-btn-normal layui-btn-mini" th:text="${goodslist.status==0?'未使用':'已使用'}">已启用</span>
+                                    <a th:href="@{|/changeStatus/${goodslist.id}|}"><span class="layui-btn layui-btn-normal layui-btn-mini" th:text="${goodslist.status==0?'未使用':'已使用'}">已启用</span></a>
+
                                 </td>
                                   <td class="td-status">
-                                      <a href="#" ><span class="layui-btn layui-btn-normal layui-btn-mini">详情</span></a>
                                       <div class="layui-inline" style="width: 100px;" >
                                           <select  id="modifier" style="width: 100px;" class="layui-select">
                                               <option value="1">用途</option>
